responsive navBar: done with functional JS

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                             alt="main logo | Comfea"
                         />
                     </div>
+                    <!-- desktop menu  -->
                     <div class="menu">
                         <ul>
                             <li><a href="./index.html">Home</a></li>
@@ -26,9 +27,26 @@
                             <li><a href="./faq.html">FAQ's</a></li>
                         </ul>
                     </div>
+                    
                     <button class="btn">Contact Us</button>
+                    <div onclick="toggleMenu()" class="hb-icon">
+                        <img src="./img/icon/hb-1.png" alt="menu icon shows in phone">
+                    </div>
                 </div>
+                <!-- mobile menu  -->
+                    <div class="mobile-menu">
+                        <ul>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="./about.html">About Us</a></li>
+                            <li><a href="./property.html">Property</a></li>
+                            <li><a href="./agent.html">Agent</a></li>
+                            <li><a href="./blog.html">Blog</a></li>
+                            <li><a href="./faq.html">FAQ's</a></li>
+                        </ul>
+                        <button class="btn">Contact Us</button>
+                    </div>
             </div>
         </div>
     </body>
+    <script src="./script.js"></script>
 </html>
